--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   },
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "popper": "^1.0.0",
     "tether": "^1.4.0"
