--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "popper": "^1.0.0",
+    "swiper": "^4.1.0",
     "tether": "^1.4.0"
   }
 }
